@@ -16,6 +16,7 @@ version next:
 - Automatic thread count based on detection number of (available) CPU cores
 - y41p Brooktree Uncompressed 4:1:1 12-bit encoder and decoder
 - ffprobe -show_error option
+- Avid 1:1 10-bit RGB Packer decoder
 
 
 version 0.9:
